fix three-line spacing (#286)
* fix three-line spacing

* fix sass style

--- a/src/js/list/index.scss
+++ b/src/js/list/index.scss
@@ -70,6 +70,10 @@
 
 .List-row--threeline {
   height: 88px;
+
+  .List-row-text-secondary {
+    margin-top: 2px;
+  }
 }
 
 .List-row {
